fix(client): Fix incorrect dialog height on safari

--- a/Website/src/drinkCustomizationDialog/style.css
+++ b/Website/src/drinkCustomizationDialog/style.css
@@ -5,7 +5,6 @@
 #drinkCustomizationDialog > form {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
 }
 
 #drinkCustomizationActionsList {
